# HayBCMD-rust

./: Cargo.toml  README.md
src/: command.rs  haybcmd.rs  lexer.rs  lib.rs  main.rs  output.rs  parser.rs  token.rs
tests/: interpreter.rs  test.rs  token.rs
